Fix note text wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 body {
     margin: 0 auto;
     padding: 0 auto;
-    background: beige;
+    background: lightgray;
 }
 
 #wrapper {
@@ -122,18 +122,22 @@ ul#completed_tasks li div button.complete{
 
 /*List Items*/
 
+
+
+
 ul li {
     background-color: white;
     border-radius: 0px;
-    width: 450px;
-    height: 20px;
+    max-width: 450px;
+    word-wrap: break-word;
     margin: 0 auto;
     margin-top: 10px;
     font-family: 'Open Sans', sans-serif;
     list-style: none;
     box-shadow: 2px 0px 10px 2px grey;
     position: relative;
-    padding: 14px
+    padding: 14px;
+    padding-right: 100px;
 }
 
 ul li .buttons {
